--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "dev": "dotenv -e .env.local -- nodemon --watch src -e ts --exec ts-node -r tsconfig-paths/register src/main.ts",
-    "dev:prod" : "dotenv -e .env.prod -- nodemon --watch src -e ts --exec ts-node -r tsconfig-paths/register src/main.ts",
+    "dev:prod": "dotenv -e .env.prod -- nodemon --watch src -e ts --exec ts-node -r tsconfig-paths/register src/main.ts",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main.js",
@@ -46,10 +46,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "dotenv-cli": "^8.0.0",
     "escape-html": "^1.0.3",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
